unpackaged/objects/HaishinTsuika__c.object
<CustomObject>
    <fields>
        <fullName>Area__c</fullName>
        <label>エリア</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>アジア</fullName>
                </value>
                <value>
                    <fullName>北アメリカ</fullName>
                </value>
                <value>
                    <fullName>中央・南アメリカ</fullName>
                </value>
                <value>
                    <fullName>ヨーロッパ</fullName>
                </value>
                <value>
                    <fullName>オセアニア</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Busho__c</fullName>
        <label>部署</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>取引先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>配信追加</relationshipLabel>
        <relationshipName>R00N10000000b08KEAQ</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_and_Region__c</fullName>
        <label>国名</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Area__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>中国</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>日本</fullName>
                </value>
                <value>
                    <fullName>ベトナム</fullName>
                </value>
                <value>
                    <fullName>インド</fullName>
                </value>
                <value>
                    <fullName>インドネシア</fullName>
                </value>
                <value>
                    <fullName>フィリピン</fullName>
                </value>
                <value>
                    <fullName>カンボジア</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>ミャンマー</fullName>
                </value>
                <value>
                    <fullName>スリランカ</fullName>
                </value>
                <value>
                    <fullName>タイ</fullName>
                </value>
                <value>
                    <fullName>韓国</fullName>
                </value>
                <value>
                    <fullName>台湾</fullName>
                </value>
                <value>
                    <fullName>マレーシア</fullName>
                </value>
                <value>
                    <fullName>ラオス</fullName>
                </value>
                <value>
                    <fullName>バングラデシュ</fullName>
                </value>
                <value>
                    <fullName>アメリカ</fullName>
                </value>
                <value>
                    <fullName>カナダ</fullName>
                </value>
                <value>
                    <fullName>メキシコ</fullName>
                </value>
                <value>
                    <fullName>アルゼンチン</fullName>
                </value>
                <value>
                    <fullName>アンティグア・バーブーダ</fullName>
                </value>
                <value>
                    <fullName>ウルグアイ</fullName>
                </value>
                <value>
                    <fullName>エクアドル</fullName>
                </value>
                <value>
                    <fullName>エルサルバドル</fullName>
                </value>
                <value>
                    <fullName>グアテマラ</fullName>
                </value>
                <value>
                    <fullName>コスタリカ</fullName>
                </value>
                <value>
                    <fullName>コロンビア</fullName>
                </value>
                <value>
                    <fullName>ジャマイカ</fullName>
                </value>
                <value>
                    <fullName>チリ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>メールアドレス</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <label>配信区分</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ウェルビー情報</fullName>
                </value>
                <value>
                    <fullName>メディック</fullName>
                </value>
                <value>
                    <fullName>ブローカー</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JurisdictionArea__c</fullName>
        <label>管轄地区</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country_and_Region__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>北京</fullName>
                </value>
                <value>
                    <fullName>天津</fullName>
                </value>
                <value>
                    <fullName>青島</fullName>
                </value>
                <value>
                    <fullName>大連</fullName>
                </value>
                <value>
                    <fullName>上海</fullName>
                </value>
                <value>
                    <fullName>蘇州</fullName>
                </value>
                <value>
                    <fullName>深セン</fullName>
                </value>
                <value>
                    <fullName>東莞</fullName>
                </value>
                <value>
                    <fullName>広州</fullName>
                </value>
                <value>
                    <fullName>香港</fullName>
                </value>
                <value>
                    <fullName>東京</fullName>
                </value>
                <value>
                    <fullName>大阪</fullName>
                </value>
                <value>
                    <fullName>名古屋</fullName>
                </value>
                <value>
                    <fullName>ハノイ</fullName>
                </value>
                <value>
                    <fullName>ホーチミン</fullName>
                </value>
                <value>
                    <fullName>ニューデリー</fullName>
                </value>
                <value>
                    <fullName>チェンナイ</fullName>
                </value>
                <value>
                    <fullName>ジャカルタ</fullName>
                </value>
                <value>
                    <fullName>マニラ</fullName>
                </value>
                <value>
                    <fullName>プノンペン</fullName>
                </value>
                <value>
                    <fullName>シンガポール</fullName>
                </value>
                <value>
                    <fullName>ヤンゴン</fullName>
                </value>
                <value>
                    <fullName>コロンボ</fullName>
                </value>
                <value>
                    <fullName>バンコク</fullName>
                </value>
                <value>
                    <fullName>クアラルンプール</fullName>
                </value>
                <value>
                    <fullName>パリ</fullName>
                </value>
                <value>
                    <fullName>トロント</fullName>
                </value>
                <value>
                    <fullName>メキシコシティー</fullName>
                </value>
                <value>
                    <fullName>サンパウロ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shimei__c</fullName>
        <label>氏名</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Yakushoku__c</fullName>
        <label>役職</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>配信追加</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>JurisdictionArea__c</columns>
        <columns>Shimei__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>№</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>